# SmartMobilityHackathon

./: .editorconfig  .env.example  .gitignore  CONTEXTO_PROYECTO.md  README.md  database_backup.json  docker-compose.yml  erd_visitas_mantenimiento_mermaid.md
apps/manager-web/: Dockerfile  README.md  config.py  import_firebase_data.py  index.html  package.json  privateKey_firebase.json  requirements.txt  run.py
apps/manager-web/instance/: app.db
apps/manager-web/src/: App.tsx  __init__.py  data_store.py  styles.css
apps/technician-mobile/: README.md  pubspec.yaml
apps/technician-mobile/android/: build.gradle.kts
apps/technician-mobile/lib/: main.dart
apps/technician-mobile/linux/: CMakeLists.txt
apps/technician-mobile/web/: index.html  (+1 more)
backend/api/: Dockerfile  README.md  pyproject.toml
backend/api/app/: main.py
backend/api/app/api/: router.py
backend/api/app/api/routes/: chargers.py  clients.py  contracts.py  health.py  incidences.py  integrations.py  planning.py  technicians.py  visits.py
backend/api/app/core/: config.py
backend/api/app/db/: session.py
backend/api/app/models/: __init__.py  entities.py
backend/api/app/schemas/: charger.py  client.py  contract.py  incidence.py  planning.py  technician.py  visit.py
backend/api/app/services/integrations/: google_fleet_routing.py  openchargemap.py
backend/api/app/services/planning/: ai_assistant_planner.py  distance.py  planner.py  scoring.py
backend/firebase/: README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT.md  PLANNING_ENGINE.md  PRODUCT_SCOPE.md
scripts/: start-dev.ps1
(+52 files in other folders)
